<resources xmlns:tools="http://schemas.android.com/tools"
    tools:locale="pt_BR">
    <string name="app_name">CorreiosTracker</string>
    <string name="btn_add_description">Adiciona um novo item</string>
    <string name="waiting_delivery">Pacotes aguardando a entrega</string>
    <string name="box_icon_description">Box Icon</string>
    <string name="track_your_product">Rastreie seu pedido</string>
    <string name="track_number">Código de Rastreio</string>
    <string name="description">Descrição, Ex: Celular novo</string>
    <string name="pray_for_sedex">Pray for Sedex</string>
    <string name="cancel">Não, vou manter as políticas de restrição de bateria</string>
    <string name="track">Rastrear</string>
    <string name="track_label">Rastreio</string>
    <string name="history">Histórico</string>
    <string name="archived">Entregues</string>
    <string name="add_code_error_message">Este não é um código de rastreamento válido.</string>
    <string name="add_description_error_code">É preciso digitar uma descrição para o produto.</string>
    <string name="add_product_error_message">Por favor preencha todos os campos corretamente e tente novamente.</string>
    <string name="empty_list_label">Aguardando a adição de novos rastreios</string>
    <string name="empty_list_sublabel">Use o botão laranja para rastrear novos itens !</string>
    <string name="empty_list_label2">Você ainda não possui itens para serem vistos aqui</string>
    <string name="empty_list_sublabel2">Quando os pacotes são entregues, eles aparecerem aqui :D</string>
    <string name="track_add_success">Rastreamento adicionado com sucesso!</string>
    <string name="track_add_fail">Ocorreu um erro na adição do seu rastreamento. Verifique se o código de rastreamento está correto.</string>
    <string name="code_format">Código %1$s</string>
    <string name="posted_format">Postado em %1$s</string>
    <string name="last_update_format">Última atualização em %1$s</string>
    <string name="locale_format">Em %1$s</string>
    <string name="notification_format">%1$s possui uma nova atualização.</string>
    <string name="archived_success">Rastreio movido para entregues com sucesso.</string>
    <string name="unarchive_success">Rastreio movido para aguardando entrega com sucesso.</string>
    <string name="track_deleted">Item deletado com sucesso.</string>
    <string name="tracking_product">Rastreando produto...</string>
    <string name="channel_name">Track Update Channel</string>
    <string name="channel_description">Channel used to send notifications about updated tracks</string>
    <string name="notification_body_format">"%1$s: %2$s.\n%3$s"</string>
    <string name="delivery_message">saiu para entrega</string>
    <string name="firebase_channel">Cloud Messaging Channel</string>
    <string name="icon_info">Icone de informações</string>
    <string name="authors">Autores</string>
    <string name="OK">OK</string>
    <string name="qr_read">Coloque em direção ao QR Code</string>
    <string name="imports">Ir para Minhas Importações</string>
    <string name="deadlines">Consulte os prazos clicando aqui</string>
    <string name="move_automatic">Mover automaticamente os itens entregues para a aba Entregues.</string>
    <string name="dark_theme">Tema escuro.</string>
    <string name="back_button_description">Botão voltar</string>
    <string name="qr_code_description">Botão para leitura de QR Code</string>
    <string name="cancel_button_description">Botão cancelar</string>
    <string name="track_button_description">Botão Rastrear</string>
    <plurals name="duration_days">
        <item quantity="one">%1$s dia corrido</item>
        <item quantity="other">%1$s dias corridos</item>
    </plurals>
    <string-array name="frequency_array">
        <item>15 Minutos</item>
        <item>30 Minutos</item>
        <item>1 Hora</item>
        <item>2 Horas</item>
        <item>4 Horas</item>
        <item>8 Horas</item>
    </string-array>
    <string name="shared_pref_name">dev.keader.keadertracker.prefs</string>
    <string name="confirm">Sim, desejo ser redirecionado</string>
    <string name="update_frequency">Intervalo de atualização:</string>
    <string name="copy_success">Código de rastreio copiado com sucesso.</string>
    <string name="icon_config_description">Icone de configuração</string>
    <string name="automove_icon_description">Icone de mover itens automaticamente</string>
    <string name="theme_icon_description">Ativa ou desativa o tema escuro</string>
    <string name="frequency_icon_description">Icone do intervalo de atualização</string>
    <string name="localization_icon_description">Icone de localização</string>
    <string name="copy_icon_description">Botão para copiar o código de rastreio</string>
    <string name="delete_icon_description">Botão para deletar o rastreio</string>
    <string name="back_icon_description">Botão de voltar</string>
    <string name="scan_code_guidelines">Aponte a camera para o QR code ou para o código de rastreio</string>
    <string name="scan_title">Nova funcionalidade de Scan!</string>
    <string name="scan_description">Agora além de QR Code, você poderá adicionar códigos de rastreio através de qualquer imagem, como sites, comprovantes de envio, fotos, entre outros. Basta apontar a sua câmera para o código desejado.</string>
    <string name="permissions_camera_ask_permission">Permissões necessárias</string>
    <string name="permissions_camera_ask_permission_message">Precisamos de acesso à câmera para escanear o QR Code</string>
    <string name="permissions_camera_allow">Permitir</string>
    <string name="permissions_camera_no_thanks">Não, obrigado</string>
    <string name="permissions_denied_camera_ask_permission">Permissão negada</string>
    <string name="permissions_denied_camera_ask_permission_message">A função não está disponível sem acesso à câmera. Ela é necessária para escanear o QR Code</string>
    <string name="permissions_denied_camera">A permissão da câmera não foi concedida</string>
    <string name="produto_estagnado">Entregadores estão jogando sinuca com seu produto!</string>
    <string name="contribute_format">Contribuições: %1$d</string>
    <string name="pix">Este projeto é totalmente gratuito. Mas se quiser ajudar o autor a continuar dando manutenção, utilize o pix: keader.android@gmail.com</string>
    <string name="settings">Configurações</string>
    <string name="contribute">Para contribuir acesse:</string>
    <string name="repo_link">https://github.com/Keader/KeaderTracker</string>
    <string name="package_description">Novo nome do produto</string>
    <string name="edit_package_description">Editar nome do produto</string>
    <string name="delivery_forecast_format">Previsão de entrega em %1$s</string>
    <string name="package_name">Nome do pacote</string>
    <string name="product_code">Código de Rastreio</string>
    <string name="alert_title">Caro usuário</string>
    <string name="alert_content">Detectamos que você utiliza uma marca de aparelho que possui uma política de restrição de bateria muito forte. Essa política pode fazer com que você não receba corretamente novas notificações dos produtos que você está aguardando, fazendo com que as notificações só cheguem se o app estiver aberto.\n Aconselhamos desabilitar a restrição para este aplicativo para que tudo ocorra sem problemas. Podemos te redirecionar a um site que ensina a desabilitar a política em diversas marcas e modelos, deseja ser redirecionado?</string>
    <string name="delete_title">Você tem certeza que deseja deletar este item?</string>
    <string name="delete_message">Após deletado, você não receberá mais nenhuma notificação a respeito deste pacote</string>
    <string name="no">Não</string>
    <string name="yes">Sim</string>
    <string name="cancel_2">Cancelar</string>
</resources>
