<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="dev.keader.correiostracker.view.adapters.TrackHistoryAdapterKt" />

        <variable
            name="itemWithTracks"
            type="dev.keader.correiostracker.database.ItemWithTracks" />

        <variable
            name="clickListener"
            type="dev.keader.correiostracker.view.adapters.TrackHistoryButtonListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/icon_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="26dp"
            android:contentDescription="@string/back_icon_description"
            android:onClick="@{() -> clickListener.onClick(itemWithTracks, TrackHistoryAdapterKt.BUTTON_BACK)}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back" />

        <ImageView
            android:id="@+id/icon_delete"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/delete_icon_description"
            android:onClick="@{() -> clickListener.onClick(itemWithTracks, TrackHistoryAdapterKt.BUTTON_DELETE)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_delete" />

        <ImageView
            android:id="@+id/icon_copy"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/copy_icon_description"
            android:onClick="@{() -> clickListener.onClick(itemWithTracks, TrackHistoryAdapterKt.BUTTON_COPY)}"
            app:layout_constraintEnd_toStartOf="@+id/icon_delete"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_copy" />

        <ImageView
            android:id="@+id/icon_share"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/copy_icon_description"
            android:onClick="@{() -> clickListener.onClick(itemWithTracks, TrackHistoryAdapterKt.BUTTON_SHARE)}"
            app:layout_constraintEnd_toStartOf="@+id/icon_copy"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_share" />

        <TextView
            android:id="@+id/label_track"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/track_label"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/icon_back"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/label_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:text="@string/history"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_purple" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_purple"
            android:layout_width="333dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            app:cardBackgroundColor="@color/primaryColor"
            app:cardCornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_track">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/texture"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/bg_texture" />

                <TextView
                    android:id="@+id/label_track_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:text="@{itemWithTracks.item.name}"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Cabos Sleeved do PC" />

                <TextView
                    android:id="@+id/label_product_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:alpha="0.5"
                    android:text="@{@string/code_format(itemWithTracks.item.code)}"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/label_track_title"
                    tools:text="Código PZ909656782BR" />

                <TextView
                    android:id="@+id/label_start_locate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/label_product_code"
                    app:trackLocale="@{itemWithTracks}"
                    tools:text="NITEROI, RJ" />

                <TextView
                    android:id="@+id/label_posted_at"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:alpha="0.5"
                    android:text="@{@string/posted_format(itemWithTracks.item.postedAt)}"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/label_start_locate"
                    tools:text="Postado em 13/10/20 13:39" />

                <TextView
                    android:id="@+id/label_last_update"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="16dp"
                    android:alpha="0.5"
                    android:text="@{@string/last_update_format(itemWithTracks.item.updatedAt)}"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/label_posted_at"
                    tools:text="Última atualização em 22/10/20 14:11" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
